--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,6 @@
             </ul>
         </nav>
         {% block content %}{% endblock %}
-        <script src="lib/index.js"></script>
+        <script src="{{ url_for('static', filename='lib/index.js') }}"></script>
     </body>
 </html>
