--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,8 @@
                 <li><a href="/user/register">Register</a></li>
             </ul>
         </nav>
-        {% block content %}{% endblock %}
-        <script src="{{ url_for('static', filename='lib/index.js') }}"></script>
+        {% block content %}
+        {% endblock %}
+        <!-- <script src="{{ url_for('static', filename='lib/index.js') }}"></script> -->
     </body>
 </html>
