--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
     <section class="paper">
-        <p>testing</p>
+
+    </section>
+    <section class="book-footing">
+        <a href="#">&lt;&lt; Last</a> &verbar; <a href="#">Next &gt;&gt;</a>
     </section>
 {% endblock %}
