--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,9 +11,9 @@
                 <li><a href="/user/login">Login</a></li>
                 <li><a href="/user/register">Register</a></li>
             </ul>
-        </nav>
+        </na>
         {% block content %}
         {% endblock %}
-        <!-- <script src="{{ url_for('static', filename='lib/index.js') }}"></script> -->
+        <script src="{{ url_for('static', filename='lib/index.js') }}"></script>
     </body>
 </html>
