--- a/app/templates/entry.html
+++ b/app/templates/entry.html
@@ -1,3 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
+    <script src="{{ url_for('static', filename='lib/entry.js') }}"></script>
 {% endblock %}
