--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
+    <script src="{{ url_for('static', filename='lib/index.js') }}"></script>
 {% endblock %}
