--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,16 +6,9 @@
     </head>
     <body>
         <nav>
-          <h1><a href="{{ url_for('index') }}">Thoth</a></h1>
-            <ul>
-                <li><a href="/entry">Create Entry</a></li>
-                <!-- Disable login for now
-                <li><a href="/user/login">Login</a></li>
-                <li><a href="/user/register">Register</a></li>
-                -->
-            </ul>
+            <h1><a href="{{ url_for('index') }}">Thoth</a></h1>
+            {% block navigation %}{% endblock %}
         </nav>
-        {% block content %}
-        {% endblock %}
+        {% block content %}{% endblock %}
     </body>
 </html>
