--- a/app/templates/entries.html
+++ b/app/templates/entries.html
@@ -1,3 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
+    <script src="{{ url_for('static', filename='lib/entries.js') }}"></script>
 {% endblock %}
