--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,10 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
-  <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
-  </form>
+    <script src="{{ url_for('static', filename='lib/login.js') }}"></script>
 {% endblock %}
