User registration and entries, closes #20 and #27

--- a/app/assets/style.css
+++ b/app/assets/style.css
@@ -93,3 +93,7 @@ nav ul li a, nav ul li span, header .action {
 .entry li {
   list-style-type: none;
 }
+
+.login li {
+  list-style-type: none;
+}
