--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
     {% load static %}
-    <script src="{% static "/assets/lib/entries.js" %}"></script>
+    <script src="{% static "/assets/lib/login.js" %}"></script>
 {% endblock %}
