Revamp to fix template issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,12 @@
 {% extends 'base.html' %}
-{% block navigation %}
-      <ul>
-          <li><a href="entries/entry/">Create Entry</a></li>
-      {% if user.is_authenticated %}
-          <li><a href="user/logout/">Logout</a></li>
-      {% else %}
-          <li><a href="user/register/">Register</a></li>
-          <li><a href="user/login/">Login</a></li>
-      {% endif %}
-      </ul>
-{% endblock %}
 {% block content %}
-    {% load static %}
-    <script src="{% static "/assets/lib/index.js" %}"></script>
+    <div class="paper">
+        <h1>Welcome!</h1>
+        <h2>Make use of this bullet journal</h2>
+        <p>
+        Thoth is a bullet journal application in Python and TypeScript. 
+        Meant to replace the physical book, intended to be used on any smart device. 
+        Named after the egyptian god Thoth, god of writing, magic, wisdom, and the moon.
+        </p>
+    </div>
 {% endblock %}
