--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,14 @@
     <body>
         <nav>
             <h1><a href="{% url 'index' %}">Thoth</a></h1>
-            {% block navigation %}{% endblock %}
+            <ul>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+            {% else %}
+                <li><a href="{% url 'register' %}">Register</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
+            {% endif %}
+            </ul>
         </nav>
         {% block content %}{% endblock %}
     </body>
