--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
             <h1><a href="{% url 'index' %}">Thoth</a></h1>
             <ul>
             {% if user.is_authenticated %}
+                <li><a href="{% url 'entries' %}">Create Entry</a></li>
+                <li><a href="{% url 'entry' %}">My Entries</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
             {% else %}
                 <li><a href="{% url 'register' %}">Register</a></li>
